Fix to smiley spacing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -199,10 +199,11 @@ hr {
 }
 
 #faces {
-	width: $w-output; height: 320px; line-height: 100%;
+	width: $w-output; height: 320px;
 	
 	img {
 		width: 32px; height: 32px;
+		vertical-align: top;
 	}
 }
 
